--- a/FRONTEND/package.json
+++ b/FRONTEND/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-spring/web": "^10.0.1",
     "dotenv": "^17.2.2",
+    "prop-types": "^15.8.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-intersection-observer": "^9.16.0",
