--- a/FRONTEND/package.json
+++ b/FRONTEND/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "@react-spring/web": "^10.0.1",
     "dotenv": "^17.2.2",
+    "i18next": "^25.5.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-i18next": "^15.7.3",
     "react-intersection-observer": "^9.16.0",
     "react-router-dom": "^7.8.2",
     "react-toastify": "^11.0.5",
